Nested Nav elements

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 
 <nav>
-<!-- id = "navbar" class = "navbar" role = "navigation" --> 
-  		<a id = "home" class = "btn" href = "#homeSect">HOME</a>
-		<a id = "about" class = "btn" href = "#aboutSect">ABOUT</a>
-		<a id = "portfolio" class = "btn" href = "#portfolioSect">PORTFOLIO</a>
-		<a id = "blog" class = "btn" href = "#blogSect">BLOG</a>
-		<a id = "contact" class = "btn" href = "#contactSect">CONTACT</a>
-
+	<ul>
+		<li><a id = "home" class = "btn" href = "#homeSect">HOME</a></li>
+		<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
+		<li><a id = "portfolio" class = "btn" href = "#portfolioSect">PORTFOLIO</a></li>
+		<li><a id = "blog" class = "btn" href = "#blogSect">BLOG</a></li>
+		<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
+	</ul>
 </nav>
 
 <!--
