--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </head>
 <body>
 
-
 <nav>
 	<ul>
 		<li><a id = "home" class = "btn" href = "#homeSect">HOME</a></li>
@@ -58,7 +57,7 @@
 </div>
 
 <div id = "contactSect" class = "sect sectC"> 
-	<h1>CCONTACT</h1>
+	<h1>CONTACT</h1>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
