Added Header tag & made nav disappear when below 768px

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head lang = "en">
+	<!-- Set Viewport to size of device -->
+	<meta name = "viewport" content = "width=device-width">
+
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,15 +24,18 @@
 </head>
 <body>
 
-<nav>
-	<ul>
-		<li><a id = "home" class = "btn" href = "#homeSect">HOME</a></li>
-		<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
-		<li><a id = "portfolio" class = "btn" href = "#portfolioSect">PORTFOLIO</a></li>
-		<li><a id = "blog" class = "btn" href = "#blogSect">BLOG</a></li>
-		<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
-	</ul>
-</nav>
+<header>
+		<nav>
+<!-- 			<h1 class = "logo">Matthew Teng</h1> -->
+				<ul>
+					<li><a id = "home" class = "btn" href = "#homeSect">HOME</a></li>
+					<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
+					<li><a id = "portfolio" class = "btn" href = "#portfolioSect">PORTFOLIO</a></li>
+					<li><a id = "blog" class = "btn" href = "#blogSect">BLOG</a></li>
+					<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
+				</ul>
+		</nav>
+</header>
 
 <!--
 	1)Num of divs correlate to the different sections included in mock up. 
