Stylize home page prelim design

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 		<nav>
 <!-- 			<h1 class = "logo">Matthew Teng</h1> -->
 				<ul>
-					<li><a id = "home" class = "btn" href = "#homeSect">HOME</a></li>
 					<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
-					<li><a id = "portfolio" class = "btn" href = "#portfolioSect">PORTFOLIO</a></li>
-					<li><a id = "blog" class = "btn" href = "#blogSect">BLOG</a></li>
+					<li><a id = "team" class = "btn" href = "#teamSect">TEAM</a></li>
+					<li><a id = "news" class = "btn" href = "#newsSect">NEWS</a></li>
+					<li><a id = "apply" class = "btn" href = "#applySect">APPLY</a></li>
 					<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
 				</ul>
 		</nav>
@@ -42,23 +42,24 @@
 	Including nav, there are n sections. Hence, we make the remaining n-1 with divs.
 	2)Alternating subsection correlate to text section while main sections are the images.
 -->
-<div id = "homeSect" class = "sect sectA" style = "color: #CAD2C5"> 
-	<h1>HOME</h1>
+<div id = "aboutSect" class = "sect sectA"> 
+	<h1 id="CCCmast">Cornell Consulting Club</h1>
+	<p id="CallToAction">Hands-on experience | Education | Networking
+	</p>
+</div>
+
+<div id = "teamSect" class = "subSection"> 
+	<img src="images/Logo3.png" align="middle"/>
+	<p>CCC is the leading and oldest undergraduate consulting organisation at Cornell with three main focus areas: hands-on experience, education, and networking. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
+</div>
+
+<div id = "newsSect" class = "sect sectB"> 
+	<h1>NEWS</h1>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
-<div id = "aboutSect" class = "subSection"> 
-	<h1>ABOUT</h1>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
-</div>
-
-<div id = "portfolioSect" class = "sect sectB"> 
-	<h1>PORTFOLIO</h1>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
-</div>
-
-<div id = "blogSect" class = "subSection"> 
-	<h1>BLOG</h1>
+<div id = "applySect" class = "subSection"> 
+	<h1>APPLY</h1>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
