--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 -->
 <div id = "aboutSect" class = "sect sectA"> 
 	<h1 id="CCCmast">Cornell Consulting Club</h1>
-	<p id="CallToAction">Hands-on experience | Education | Networking
+	<p id="CallToAction">
+		Hands-on experience | Education | Networking
 	</p>
 </div>
 
