Skeleton for Hamburger Menu +Landing Page Styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 <header>
 		<nav>
-<!-- 			<h1 class = "logo">Matthew Teng</h1> -->
-				<ul>
+				<ul class = "menuList">
 					<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
 					<li><a id = "team" class = "btn" href = "#teamSect">TEAM</a></li>
 					<li><a id = "news" class = "btn" href = "#newsSect">NEWS</a></li>
@@ -35,6 +34,11 @@
 					<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
 				</ul>
 		</nav>
+
+		<!-- Hamburger Icon shows up for mobile -->
+		<div id ="mobileBurger" class = "menuIcon">
+			<span = "burgerIcon"></span>
+		</div>
 </header>
 
 <!--
@@ -45,7 +49,7 @@
 <div id = "aboutSect" class = "sect sectA"> 
 	<h1 id="CCCmast">Cornell Consulting Club</h1>
 	<p id="CallToAction">
-		Hands-on experience | Education | Networking
+		Education &#8251 Hands-on experience &#8251 Networking
 	</p>
 </div>
 
