--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet"> 
 	<link rel="stylesheet" href = "css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cabin">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Khula">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
