--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 
 	<!--Carousel-->
-    <div id = "carousel" class="carousel slide" data-ride = "carousel"> 
+    <div id = "newsSect" class="carousel slide" data-ride = "carousel"> 
 
       <ol class = "carousel-indicators">
-        <li data-target= "#carousel" data-slide-to = "0" class = "active"></li>
-        <li data-target= "#carousel" data-slide-to = "1" ></li>
-        <li data-target= "#carousel" data-slide-to = "2" ></li>
+        <li data-target= "#newsSect" data-slide-to = "0" class = "active"></li>
+        <li data-target= "#newsSect" data-slide-to = "1" ></li>
+        <li data-target= "#newsSect" data-slide-to = "2" ></li>
       </ol>
       
       <!--Wrapper for Slides-->
@@ -106,10 +106,10 @@
       </div>
 
     <!--Controls-->
-    <a class = "left carousel-control" href = "#carousel" data-slide="prev">
+    <a class = "left carousel-control" href = "#newsSect" data-slide="prev">
       <span class = "glyphicon glyphicon-chevron-left"></span>
     </a>
-    <a class = "right carousel-control" href = "#carousel" data-slide="next">
+    <a class = "right carousel-control" href = "#newsSect" data-slide="next">
       <span class = "glyphicon glyphicon-chevron-right"></span>
     </a>
   </div>
