Center Text, added FontAwesome

--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 </div>
 
 <div id = "aboutSect" class = "subSection"> 
+	<h1 class = "text-center">Who are we?</h1>
 	<p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
 </div>
 
 
 	<!--Carousel-->
-    <div id = "newsSect" class="carousel slide" data-ride = "carousel"> 
+    <div id = "newsSect" class="carousel slide sect" data-ride = "carousel"> 
 
       <ol class = "carousel-indicators">
         <li data-target= "#newsSect" data-slide-to = "0" class = "active"></li>
