--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
 
 <div id = "teamSect" class = "subSection"> 
 	<h1>TEAM</h1>
+	<div class="column-left">
+		<p class = "text-center"> President </p>
+		<img src="http://placehold.it/200x200">
+		<p class = "text-center"> This is the LEFT column </p>
+	</div>
+	<div class="column-center">
+		<p class = "text-center"> Vice President </p>
+		<img src="http://placehold.it/200x200">
+		<p class = "text-center"> This is the CENTER column </p>
+	</div>
+	<div class="column-right">
+	<p class = "text-center"> Bottom Bitch </p>
+	<img src="http://placehold.it/200x200">
+	<p class = "text-center"> This is the RIGHT column </p>
+	</div>
+</div>
+
+
+
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
