Adding social media buttons for contact section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"> 
 	<link rel="stylesheet" href = "css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Khula">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link href="css/bootstrap-social.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -145,8 +147,31 @@
 	Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
-<div id = "contactSect" class = "subSection" style = "background: tomato"> 
+<div id = "applySect" class = "subSection"> 
+	<h1>APPLY</h1>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
+</div>
+
+<div id = "contactSect" class = "subSection" style = "background: rgb(142, 22, 22)"> 
+	<h1>CONTACT</h1>
+	<div>
+		List Serve<br>
+		<form>
+			<input type="text" name="email">
+  		<input type="submit" value="Subscribe">
+		</form>
+	</div>
+	<div>
+		<a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/cornellconsultingclub/">
+	    <span class="fa fa-facebook"></span>
+	  </a> Facebook <br>
+		<a class="btn btn-social-icon btn-linkedin" href="https://www.facebook.com/cornellconsultingclub/">
+	    <span class="fa fa-linkedin"></span>
+	  </a> Linkedin <br>
+		<a class="btn btn-social-icon btn-envelope" href="https://www.facebook.com/cornellconsultingclub/">
+	    <span class="fa fa-envelope"></span>
+	  </a> Email 
+	</div>
 </div>
 
 
