apply page updated

--- a/index.html
+++ b/index.html
@@ -142,18 +142,32 @@
 <div id = "applySect" class = "sect sectC"> 
 	<h1 class = "text-center">APPLY</h1>
 	<p>
+
+	<span>Gain Consulting Experience</span>
+	<br> 	
+	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience. In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.<br>
+	<br>
+	<hr align="center">
+	</p>
+
+	<p>
+	<span>Expand Your Network</span>
+	<br>
 	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
-	
-	In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.</p>
+	<br>
+	<hr>
+	</p>
+
+	<p>
+	<span>Educational Program</span>
+	<br>
+	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
+	<br>
+	</p>
 
 	<div class="col-lg-12 text-center">
-	<button type="button" class="btn btn-success btn-lg"><a href = "#">Apply</a></button>
+		<button type="button" class="btn btn-success btn-lg"><a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank">Apply</a></button>
 	</div>
-</div>
-
-<div id = "applySect" class = "subSection"> 
-	<h1>APPLY</h1>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
 </div>
 
 <div id = "contactSect" class = "subSection" style = "background: rgb(142, 22, 22)"> 
